# TradingEngine

./: pyproject.toml
src/broker/: backtest.py  broker.py
src/core/: __init__.py
src/datasource/: dataframe.py  datasource.py
src/event/: event.py  tick.py
src/strategy/: strategy.py
src/tradingengine/: __init__.py
src/tradingengine/broker/: backtest.py  broker.py
src/tradingengine/core/: __init__.py
src/tradingengine/datasource/: dataframe.py  datasource.py
src/tradingengine/enums/: __init__.py  fees.py  position_status.py  side.py
src/tradingengine/event/: tick.py
src/tradingengine/positions/: position.py  position_data.py  positions_registry.py
src/tradingengine/strategy/: strategy.py
tests/datasource/: dataframe.py
tests/stategy/: mock.py
