[project]
name = "tradingengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.hatch.build.targets.wheel]
packages = ["src/tradingengine"]
